--- a/index.html
+++ b/index.html
@@ -23,38 +23,28 @@
 	            <input id="userName" type="text" data-bind="value: userName" />
 	            <a id="logIn" class="button" data-bind="click: loginUser" >That's me!</a>
 	        </div>
-	        <div id="newQuestionView" data-bind="visible: isLoggedIn()">
-	            <label for="newQuestion" id="questionPrompt">Adventurer wants to know...</label>
-	            <textarea cols=20 rows=2 id="newQuestion" name="newQuestion"></textarea>
-	            <a id="addItem" class="button">Ask now!</a>
-	        </div>
+          <div data-bind="visible: isLoggedIn()">
+              <label for="newQuestion" id="questionPrompt"><span data-bind="text: userName">Adventurer</span> wants to know...</label>
+              <textarea cols=20 rows=2 id="newQuestion" data-bind="value: newQuestionText"></textarea>
+              <a id="addItem" data-bind="click: addQuestion" class="button">Ask now!</a>
+          </div>
 	    </section>
-	    <ul id="questions">
-	        <li class="question">
-	          <div class="voteStatus">
-	              <a class="vote voteup"></a>
-	              <div class="votecount">1</div>
-	              <a class="vote votedown selected"></a>
-	          </div>
-	          <div class="questionText">
-	              <p>What is your quest?</p>
-	              <div class="questionAuthor">From: Bridge Keeper</div>
-	          </div>
-	      </li>
-	      <li class="question">
-	        <div class="voteStatus">
-	            <a class="vote voteup"></a>
-	            <div class="votecount">1</div>
-	            <a class="vote votedown selected"></a>
-	        </div>
-	        <div class="questionText">
-	            <p>What is your favorite color?</p>
-	            <div class="questionAuthor">From: Bridge Keeper</div>
-	        </div>
-	      </li>
-	    </ul>
+	    <ul id="questions" data-bind="foreach: questions">
+        <li class="question">
+          <div class="voteStatus">
+            <a class="vote voteup"></a>
+            <div class="votecount">1</div>
+            <a class="vote votedown selected"></a>
+          </div>
+          <div class="questionText">
+            <p data-bind="text: content"></p>
+            <div class="questionAuthor">From: <span data-bind="text: author"></span></div>
+          </div>
+        </li>
+      </ul>
 	</div>
 
+  <script type="text/javascript" src="scripts/question-viewmodel.js"></script>
   <script type="text/javascript" src="scripts/overflow-viewmodel.js"></script>
   <script type="text/javascript" src="scripts/app.js"></script>
 </body>
